Closure_33/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_33_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:build/lib/*:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest_scaffolding.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java:121: error: cannot find symbol
      recordType0.matchConstraint(recordType1);
                 ^
  symbol:   method matchConstraint(RecordType)
  location: variable recordType0 of type RecordType
/home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java:583: error: cannot find symbol
      errorFunctionType0.matchConstraint(noResolvedType0);
                        ^
  symbol:   method matchConstraint(NoResolvedType)
  location: variable errorFunctionType0 of type ErrorFunctionType
/home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java:592: error: cannot find symbol
      noResolvedType0.matchConstraint(noResolvedType0);
                     ^
  symbol:   method matchConstraint(NoResolvedType)
  location: variable noResolvedType0 of type NoResolvedType
/home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java:605: error: cannot find symbol
      recordType0.matchConstraint(recordType0);
                 ^
  symbol:   method matchConstraint(RecordType)
  location: variable recordType0 of type RecordType
/home/liumengjiao/Desktop/CI/Evosuite/Closure_33/Closure/evosuite/3/com/google/javascript/rhino/jstype/PrototypeObjectType_ESTest.java:620: error: cannot find symbol
      noResolvedType0.matchConstraint(recordType0);
                     ^
  symbol:   method matchConstraint(RecordType)
  location: variable noResolvedType0 of type NoResolvedType
5 errors
